// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-57 {
  position: relative;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-59 {
  color: #574feb !important;
}

<div
  class="emotion-57 emotion-0 emotion-59 test fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-57 {
  position: relative;
}

.emotion-57 {
  background-color: red;
}

<div
  class="emotion-57 emotion-0 emotion-1 fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-57 {
  position: relative;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

<div
  class="emotion-57 emotion-0 emotion-1 fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-57 {
  position: relative;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-59 {
  color: #574feb !important;
}

<div
  class="emotion-57 emotion-0 emotion-59 fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-57 {
  position: relative;
}

.emotion-57 {
  background-color: red;
}

<div
  class="emotion-57 emotion-0 emotion-1 fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-56.emotion-56.emotion-56 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
  padding: 0;
}

.emotion-51.emotion-51.emotion-51 {
  padding: 0.5rem 0;
}

.emotion-16 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: linear-gradient(rgb(255,255,255),rgb(249,250,251));
  border: 1px solid #d9d9e1;
  border-radius: 6px;
  color: #212121;
  height: 2.75em;
  padding: 0.4em 2em 0.4em 0.8em;
  line-height: 1.5;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.4em 0.8em;
}

.emotion-16[disabled],
.emotion-16[aria-disabled="true"] {
  background: #f2f2f5;
  box-shadow: unset;
}

.emotion-16[disabled] + .fp-Icon {
  color: #7b899d;
  fill: #7b899d;
}

.emotion-16:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-16[aria-expanded="true"] {
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-2 {
  max-width: calc(100% - 4rem);
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  min-width: 4rem;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-7.emotion-7.emotion-7 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-3 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-55 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-52 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-53 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-53:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-22 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-22 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-22:hover {
  color: unset;
  fill: unset;
}

.emotion-22[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-22:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):hover {
  background-color: #f7f7fa;
}

.emotion-22:not(:disabled):focus:active,
.emotion-22:not(:disabled):hover:active {
  background-color: #f2f2f5;
}

.emotion-22 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-21.emotion-21.emotion-21 {
  font-weight: 300;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-21.emotion-21.emotion-21[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-17 {
  line-height: 1.2;
}

abbr.emotion-17 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-17 {
  font-family: monospace;
}

i.emotion-17 {
  font-style: italic;
}

kbd.emotion-17 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-17 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-17 {
  font-weight: bold;
}

sub.emotion-17,
sup.emotion-17 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-17,
u.emotion-17 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-17,
cite.emotion-17,
var.emotion-17,
em.emotion-17 {
  font-style: italic;
}

kbd.emotion-17,
pre.emotion-17,
samp.emotion-17 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-17 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-29.emotion-29.emotion-29 {
  font-weight: 300;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"] {
  background-color: #eeedfd;
  color: #1a1847;
}

.emotion-29.emotion-29.emotion-29[aria-selected="true"]:hover {
  background-color: #eae8fc;
}

.emotion-29.emotion-29.emotion-29[aria-disabled="true"] {
  color: #cfd8e3;
}

.emotion-57 {
  position: relative;
}

.emotion-57 {
  background-color: red;
}

<div
  class="emotion-57 emotion-0 emotion-1 fp-Box fp-SelectMenu"
>
  <div
    aria-controls="test"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="emotion-0 emotion-1 emotion-6 emotion-16 fp-SelectMenuButton fp-Box fp-DropdownMenuButton"
    loop=""
    role="button"
    tabindex="0"
  >
    <div
      class="emotion-0 emotion-1 emotion-2 fp-SelectMenuButtonText fp-Box"
    >
      Search for a fruit...
    </div>
    <div
      class="emotion-0 emotion-1 emotion-12 fp-SelectMenuButtonIconsWrapper fp-Box"
    >
      <div
        class="emotion-7 emotion-0 emotion-1 fp-Box fp-Set"
      >
        <svg
          class="emotion-3 emotion-0 emotion-1 emotion-6 fp-SelectMenuButtonIcon fp-Box fp-Icon"
          role="img"
          viewBox="0 0 448 512"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-52 emotion-53 emotion-0 emotion-55 emotion-56 fp-SelectMenuPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
    tabindex="-1"
  >
    <div
      class="emotion-0 emotion-1 emotion-51 fp-SelectMenuItemsWrapper fp-Box"
    >
      <li
        aria-selected="false"
        class="emotion-21 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-1"
        loop=""
        role="option"
        tabindex="0"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Apples
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-2"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Bananas
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-3"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Oranges
        </span>
      </li>
      <li
        aria-selected="false"
        class="emotion-29 emotion-22 emotion-0 emotion-1 fp-Box fp-DropdownMenuItem fp-SelectMenuItem"
        id="test-4"
        loop=""
        role="option"
        tabindex="-1"
      >
        <span
          class="emotion-17 emotion-0 emotion-1 emotion-6 fp-SelectMenuItemText fp-Box fp-Text"
        >
          Mangos
        </span>
      </li>
    </div>
  </ul>
</div>
`;
